@@ -152,6 +152,15 @@ operator|new
 name|HunspellWord
 argument_list|()
 decl_stmt|;
+DECL|field|ALIAS_KEY
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|ALIAS_KEY
+init|=
+literal|"AF"
+decl_stmt|;
 DECL|field|PREFIX_KEY
 specifier|private
 specifier|static
@@ -288,6 +297,19 @@ specifier|private
 specifier|final
 name|Version
 name|version
+decl_stmt|;
+DECL|field|aliases
+specifier|private
+name|String
+index|[]
+name|aliases
+decl_stmt|;
+DECL|field|aliasCount
+specifier|private
+name|int
+name|aliasCount
+init|=
+literal|0
 decl_stmt|;
 comment|/**    * Creates a new HunspellDictionary containing the information read from the provided InputStreams to hunspell affix    * and dictionary files    *    * @param affix InputStream for reading the hunspell affix file    * @param dictionary InputStream for reading the hunspell dictionary file    * @param version Lucene Version    * @throws IOException Can be thrown while reading from the InputStreams    * @throws ParseException Can be thrown if the content of the files does not meet expected formats    */
 DECL|method|HunspellDictionary
@@ -652,6 +674,23 @@ name|line
 operator|.
 name|startsWith
 argument_list|(
+name|ALIAS_KEY
+argument_list|)
+condition|)
+block|{
+name|parseAlias
+argument_list|(
+name|line
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|line
+operator|.
+name|startsWith
+argument_list|(
 name|PREFIX_KEY
 argument_list|)
 condition|)
@@ -887,14 +926,9 @@ operator|-
 literal|1
 condition|)
 block|{
-name|char
-name|appendFlags
-index|[]
+name|String
+name|flagPart
 init|=
-name|flagParsingStrategy
-operator|.
-name|parseFlags
-argument_list|(
 name|affixArg
 operator|.
 name|substring
@@ -903,6 +937,36 @@ name|flagSep
 operator|+
 literal|1
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|aliasCount
+operator|>
+literal|0
+condition|)
+block|{
+name|flagPart
+operator|=
+name|getAliasValue
+argument_list|(
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|flagPart
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|char
+name|appendFlags
+index|[]
+init|=
+name|flagParsingStrategy
+operator|.
+name|parseFlags
+argument_list|(
+name|flagPart
 argument_list|)
 decl_stmt|;
 name|Arrays
@@ -1444,15 +1508,9 @@ operator|.
 name|length
 argument_list|()
 expr_stmt|;
-name|wordForm
-operator|=
-operator|new
-name|HunspellWord
-argument_list|(
-name|flagParsingStrategy
-operator|.
-name|parseFlags
-argument_list|(
+name|String
+name|flagPart
+init|=
 name|line
 operator|.
 name|substring
@@ -1463,6 +1521,37 @@ literal|1
 argument_list|,
 name|end
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|aliasCount
+operator|>
+literal|0
+condition|)
+block|{
+name|flagPart
+operator|=
+name|getAliasValue
+argument_list|(
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|flagPart
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|wordForm
+operator|=
+operator|new
+name|HunspellWord
+argument_list|(
+name|flagParsingStrategy
+operator|.
+name|parseFlags
+argument_list|(
+name|flagPart
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1562,6 +1651,111 @@ block|{
 return|return
 name|version
 return|;
+block|}
+DECL|method|parseAlias
+specifier|private
+name|void
+name|parseAlias
+parameter_list|(
+name|String
+name|line
+parameter_list|)
+block|{
+name|String
+name|ruleArgs
+index|[]
+init|=
+name|line
+operator|.
+name|split
+argument_list|(
+literal|"\\s+"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|aliases
+operator|==
+literal|null
+condition|)
+block|{
+comment|//first line should be the aliases count
+specifier|final
+name|int
+name|count
+init|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|ruleArgs
+index|[
+literal|1
+index|]
+argument_list|)
+decl_stmt|;
+name|aliases
+operator|=
+operator|new
+name|String
+index|[
+name|count
+index|]
+expr_stmt|;
+block|}
+else|else
+block|{
+name|aliases
+index|[
+name|aliasCount
+operator|++
+index|]
+operator|=
+name|ruleArgs
+index|[
+literal|1
+index|]
+expr_stmt|;
+block|}
+block|}
+DECL|method|getAliasValue
+specifier|private
+name|String
+name|getAliasValue
+parameter_list|(
+name|int
+name|id
+parameter_list|)
+block|{
+try|try
+block|{
+return|return
+name|aliases
+index|[
+name|id
+operator|-
+literal|1
+index|]
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|IndexOutOfBoundsException
+name|ex
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Bad flag alias number:"
+operator|+
+name|id
+argument_list|,
+name|ex
+argument_list|)
+throw|;
+block|}
 block|}
 comment|/**    * Abstraction of the process of parsing flags taken from the affix and dic files    */
 DECL|class|FlagParsingStrategy
