@@ -240,6 +240,140 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testCompressedHunspellDictionary_loadDicAff
+specifier|public
+name|void
+name|testCompressedHunspellDictionary_loadDicAff
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|ParseException
+block|{
+name|InputStream
+name|affixStream
+init|=
+name|getClass
+argument_list|()
+operator|.
+name|getResourceAsStream
+argument_list|(
+literal|"testCompressed.aff"
+argument_list|)
+decl_stmt|;
+name|InputStream
+name|dictStream
+init|=
+name|getClass
+argument_list|()
+operator|.
+name|getResourceAsStream
+argument_list|(
+literal|"testCompressed.dic"
+argument_list|)
+decl_stmt|;
+name|HunspellDictionary
+name|dictionary
+init|=
+operator|new
+name|HunspellDictionary
+argument_list|(
+name|affixStream
+argument_list|,
+name|dictStream
+argument_list|,
+name|TEST_VERSION_CURRENT
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|dictionary
+operator|.
+name|lookupSuffix
+argument_list|(
+operator|new
+name|char
+index|[]
+block|{
+literal|'e'
+block|}
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|)
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|dictionary
+operator|.
+name|lookupPrefix
+argument_list|(
+operator|new
+name|char
+index|[]
+block|{
+literal|'s'
+block|}
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|)
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|dictionary
+operator|.
+name|lookupWord
+argument_list|(
+operator|new
+name|char
+index|[]
+block|{
+literal|'o'
+block|,
+literal|'l'
+block|,
+literal|'r'
+block|}
+argument_list|,
+literal|0
+argument_list|,
+literal|3
+argument_list|)
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|affixStream
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dictStream
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
